--- a/005-whatta-news/.env
+++ b/005-whatta-news/.env
@@ -1,1 +1,2 @@
-VITE_API_KEY = "YOUR_API_KEY"
+VITE_API_KEY = "b79bc164e69d4a6404ed09f507a222e0"
+VITE_API_BASE_URL = "http://api.mediastack.com/v1"
